--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ img {
 .right div {
 	width: 100%;
 	height: 100px;
-	background: var(--accent-color);
+	outline: var(--accent-color) solid 1px;
 }
 
 .left div {
