--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ main {
 	width: 90ch;
 }
 
-header {
+header.main {
 	padding: 1rem;
 	font-size: 9ch;
 	color: var(--accent-color);
@@ -124,6 +124,7 @@ footer nav a:not(:first-child) {
 	display: flex;
 	flex-direction: row;
 	padding: 0;
+	overflow: hidden;
 }
 
 .content > div {
@@ -210,13 +211,24 @@ figure {
 }
 
 figcaption {
-	border: var(--accent-color) solid 1px;
 	padding: 0.25rem;
 	margin: 0;
 }
 
+figcaption:first-child {
+	border: none;
+	border-bottom: var(--accent-color) solid 1px;
+}
+
+figcaption:last-child {
+	border: none;
+	border-top: var(--accent-color) solid 1px;
+}
+
 figure a {
 	color: var(--accent-color);
+	border: var(--accent-color) solid 1px;
+	border-top: none;
 }
 
 figure a:hover {
@@ -238,8 +250,84 @@ img {
 	max-width: 100%;
 }
 
-.left div {
+.container {
 	width: 100%;
-	height: 250px;
 	border: var(--accent-color) solid 1px;
+}
+
+header.sub {
+	padding: 0.25rem;
+	margin: 0;
+	color: white;
+	background: var(--accent-color);
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+}
+
+.info div {
+	display: grid;
+	grid-auto-columns: minmax(0, 1fr);
+	grid-auto-flow: column;
+	overflow: hidden;
+}
+
+.info div * {
+	margin: 0.25rem;
+}
+
+.info div p.bold {
+	font-weight: 600;
+}
+
+.random-child {
+	visibility: hidden;
+}
+
+.continuous-scrolling-text {
+	position: relative;
+	overflow: hidden;
+	white-space: nowrap;
+	display: flex;
+}
+
+.scrolling-content {
+	display: inline-block;
+	animation: scroll-left 20s linear infinite;
+	padding: 0.1rem;
+}
+
+@keyframes scroll-left {
+	from {
+		transform: translateX(0);
+	}
+	to {
+		transform: translateX(-100%);
+	}
+}
+
+.tech-icon {
+	width: 40px;
+	height: 40px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.tech-icon i {
+	font-size: 100%;
+	font-size: 40px;
+	line-height: 1;
+}
+
+.tech-icon img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
+.right article {
+	min-width: 100%;
 }
