--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,11 +137,11 @@ footer nav a:not(:first-child) {
 }
 
 .content .left {
-	width: 25%;
+	width: 189px;
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
-	flex: 0 0 25%;
+	flex: 0 0 189px;
 }
 
 .content .right {
